<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="mapKey">AIzaSyDZmp3SSG7XOgszDHMBKwZZ-7aa0nyoELs</string>


    <string name="app_name">Memoriae</string>
    <string name="logo_image">logo image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="background_color">background color</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="memoriae_2021">© Memoriae 2021</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_small">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_caps">REGISTER</string>
    <string name="forgot_password_activity">Forgot Password</string>
    <string name="forgot_password_title_description">Enter your registered e-mail address and we\'ll send you an email to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_fragment">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="personal">Personal</string>
    <string name="global">Global</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="add_memory">ADD MEMORY</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="image">image</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="select_current_location">SELECT CURRENT LOCATION</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="display_publicly">DISPLAY PUBLICLY</string>
    <string name="save">SAVE</string>
    <string name="rate_out_of_5">Rate out of 5</string>
    <string name="rate_the_memory_out_of_5">RATE THE MEMORY OUT OF 5</string>
    <string name="location_via_google_maps">POWERED BY GOOGLE MAPS</string>
    <string name="amazing_day_with_friends">Amazing Day With Friends</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="no_personal_memories_found">No personal memories found !</string>
    <string name="no_memories_found">No memories found !</string>
    <string name="imagebutton">imageButton</string>
    <string name="descriptionMemory">I went to Amritsar to pay a visit to my grandparents. We visited thr golden temple also. The Environment was very divine and holistic. We had amazing kadha prasad also</string>
    <string name="abcdefghijklmnqr">abcdefghijklmnqr</string>
    <string name="view_on_google_maps">VIEW ON GOOGLE MAPS</string>
    <string name="invalid">Not availabe</string>
    <string name="invalid_city_name_weather_data_not_available">Weather data not available. Please change the city name</string>
    <string name="map">map</string>
    <string name="publicc">PUBLIC</string>
    <string name="public_nzme">Public</string>
    <string name="privatee">PRIVATE</string>
    <string name="pvt">pvt</string>
    <string name="private_name">PRIVATE</string>
    <string name="temperature">temperature</string>
    <string name="a">Scattered Clouds 20°C</string>
    <string name="no_memories_found_try_another_city_name">No Memories found. Try another city name</string>
    <string name="city_name">City Name</string>
    <string name="swipe_to_see_more">Swipe to see more</string>
    <string name="customTV">abcdefghijklmnqr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="btn">btn</string>
    <string name="no_favorites_found">No Favorites Found !</string>
    <string name="no_favorites_added">No Favorites Added!</string>
    <string name="search_globally">SEARCH GLOBALLY</string>
    <string name="search_locally">SEARCH LOCALLY</string>
    <string name="no_favorites_added_yet">No Favorites Added Yet !</string>

</resources>