<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddEditMemory">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="#989898"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textColor="#222934"
                    android:hint="@string/title"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColorHint="#989898"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#222934"
                    android:minLines="2"
                    android:hint="@string/description"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCityName"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColorHint="#989898"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCityName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:textColor="#222934"
                        android:hint="@string/city_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColorHint="#989898"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="textCapSentences"
                        android:textColor="#222934"
                        android:hint="@string/date"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColorHint="#989898"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:textColor="#222934"
                    android:hint="@string/location"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="#ADCBE3"
                android:padding="10dp"
                android:textStyle="italic|bold"
                android:layout_margin="30dp"
                android:background="@drawable/shape_image_view_border"
                android:text="@string/location_via_google_maps"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image"
                    android:background="@drawable/add_screen_image_placeholder"
                    android:src="@drawable/shape_image_view_holder"
                    android:scaleType="centerCrop"/>
                
                <TextView
                    android:id="@+id/tvAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textColor="#ADCBE3"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:text="@string/add_image"/>

            </LinearLayout>
            
            <RadioGroup
                android:id="@+id/rG"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/_14sdp">

                <RadioButton
                    android:id="@+id/rbPublic"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_background_radio"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/publicc"
                    android:textColor="#222934"/>

                <RadioButton
                    android:id="@+id/rbPrivate"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/button_background_radio"
                    android:button="@null"
                    android:checked="true"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/private_name"
                    android:textColor="#222934"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColorHint="#989898"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="#222934"
                    android:hint="@string/rate_out_of_5"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>